[MODULES-253] Activating java.activation module on JDK9 (not available by default)